crates/biome_diagnostics/tests/snapshots/html_mdx_print_diagnostic_with_escaped_indentation.snap
---
source: crates/biome_diagnostics/tests/disagnostics.rs
expression: content
---
code&#95;block check <span style="color: #000; background-color: #ddd;"> FIXABLE </span> ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━<br /><br /><strong><span style="color: Tomato;">&amp;nbsp;&amp;nbsp;</span></strong><strong><span style="color: Tomato;">✖</span></strong> <span style="color: Tomato;">This is the message of the diagnostic. It will appear in different colours based on the severity of the diagnostic.</span><br />&amp;nbsp;&amp;nbsp;<br />
