crates/biome_diagnostics/tests/snapshots/html_print_diagnostic.snap
---
source: crates/biome_diagnostics/tests/disagnostics.rs
expression: "String::from_utf8(content).unwrap()"
---
code_block check <span style="color: #000; background-color: #ddd;"> FIXABLE </span> ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

<strong><span style="color: Tomato;">  </span></strong><strong><span style="color: Tomato;">✖</span></strong> <span style="color: Tomato;">This is the message of the diagnostic. It will appear in different colours based on the severity of the diagnostic.</span>
