crates/biome_diagnostics/tests/snapshots/truncates_long_diagnostic_lines_with_left_ellipsis.snap
---
source: crates/biome_diagnostics/tests/disagnostics.rs
expression: content
---
long-line.js:1:601 check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
  > 1 │ ...+;a++;a++;a++;a++;a++;a++;a++;a++;a++;a++;a++;debugger;
      │                                                  ^^^^^^^^^
  
  i Unsafe fix: Remove target
  
    1 │ ...+;a++;a++;a++;a++;a++;a++;a++;a++;a++;a++;a++;debugger;
      │                                                  ---------
