crates/biome_diagnostics/tests/snapshots/truncates_long_diagnostic_span_with_both_ellipses.snap
---
source: crates/biome_diagnostics/tests/disagnostics.rs
expression: content
---
long-line.js:1:601 check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
  > 1 │ ...;a++;a++;a++;a++;a++;a++;0b0000000000000000000000000000000000000000000000000000000000000000000000000...
      │                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  
  i Unsafe fix: Remove target
  
    1 │ ...;a++;a++;a++;a++;a++;a++;0b0000000000000000000000000000000000000000000000000000000000000000000000000...
      │                             ---------------------------------------------------------------------------
