crates/biome_diagnostics/tests/snapshots/truncates_long_diagnostic_span_with_right_ellipsis.snap
---
source: crates/biome_diagnostics/tests/disagnostics.rs
expression: content
---
long-line.js:1:9 check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
  > 1 │ var x = 0b000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000...
      │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  
  i Unsafe fix: Remove target
  
    1 │ var·x·=·0b000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000...
      │         --------------------------------------------------------------------------------------------
